# adb-sync

./: .gitignore  Cargo.toml  LICENSE  README.md  adb-sync  adb-sync-diff  adb-sync-tcp  adb-sync-tcp-server  build-rust
adb-sync-android/: Cargo.toml
adb-sync-android/src/: get_ip.rs  ip_checker.rs  lib.rs  main.rs  stdio_server.rs  tcp_server.rs
cli/: Cargo.toml
cli/src/tcp/: android.rs  host.rs  ip-checker-server.rs
src/: diff.rs  index.rs  lib.rs  main.rs  send.rs  send_stream.rs  unix_path.rs
src/cli/tcp/: android.rs
src/stream/: android.rs  host.rs  mod.rs  protocol.rs
src/transfer/: crc.rs  mod.rs  receive.rs  send.rs  tcp.rs  tcp_receive.rs
src/transfer/tcp_receive/: cli.rs  mod.rs
