[package]
name = "adb-sync"
version = "0.1.0"
edition = "2021"

# -------- Host binaries --------

# -------- Android binaries --------
[[bin]]
name = "android"
path = "src/cli/tcp/android.rs"

[dependencies]
jwalk = "0.8.1"
bincode = { version = "2.0.0-rc.3", features = ["bincode_derive", "derive"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
zstd = { version = "0.12.4", features = ["zstdmt"] }
pathdiff = "0.2.1"
num_cpus = "1.16.0"
byteorder = "1.5.0"
crc = "3.0.1"
filetime = "0.2.22"
num-traits = "0.2.17"
num-derive = "0.4.1"
clap = { version = "4.4.8", features = ["derive"] }
readwrite = "0.2.0"
cfg-if = "1.0.0"
