[package]
name = "adb-sync"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["adb-sync-android"]

[dependencies]
jwalk = "0.8.1"
bincode = { version = "2.0.0-rc.3", features = ["bincode_derive", "derive"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
pathdiff = "0.2.1"
num_cpus = "1.16.0"
byteorder = "1.5.0"
crc = "3.0.1"
filetime = "0.2.22"
num-traits = "0.2.17"
num-derive = "0.4.1"
readwrite = "0.2.0"
cfg-if = "1.0.0"
bytesize = "1.3.0"
once_cell = "1.19.0"
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
colored = "2.1.0"
shell-words = "1.1.0"
paste = "1.0.15"
